# qbittorrent-mover

./: .gitignore  Cargo.toml  README.adoc
src/: config.rs  logger.rs  main.rs  torrent.rs
